pkl-core/src/test/files/LanguageSnippetTests/input/errors/objectCannotHavePredicateMember.pkl
class Foo

res1 = new Foo {
  [[true]] = 42
}
